# lsfm_data_processing

./: .gitignore  .pre-commit-config.yaml  0_create_MIPs  0_determine_norm_params.py  0_lfsm_batch_eval.py  1_create_MIPs.py  1_preprocess_data.py  1_select_representative_sections.py  2_get_selected_atlas_sections.py  2_select_representative_sections.py  3_chunk_data.py  4_filter_black_chunks.py  5_select_representative_chunks.py  5a_select_random_chunks.py  5b_select_representative_chunks.py  README.md  determine_norm_params.py  lfsm_batch_eval.py  make_zstack.py  pyproject.toml  select_images_and_randomize_order.py  utils.py
data_eval_and_management/: 0_determine_norm_params.py  determine_norm_params.py
lsfm_data_processing/: __init__.py
lsfm_data_processing/utils/: __init__.py  atlas.py  cellpose_io.py  chunking.py  image_ops.py  io_helpers.py  mip.py  naming.py  selection.py  stacks.py
preprocess_for_ants/: 1_nii_to_2D_files.py  2_2D_to_nii_mask.py  3_dilate_and_fill_mask.py  4_apply_mask.py
preprocess_for_ants/configs/: 1_nii_to_2D_files_template.toml  2_2D_to_nii_mask_template.toml  3_dilate_and_fill_mask_template.toml  4_apply_mask_template.toml
preprocess_for_cellpose/: 0_convert_png_to_tif.py  1_preprocess_data.py  2_select_representative_sections.py  2a_get_selected_atlas_sections.py  3_chunk_data.py  4_filter_black_chunks.py  5a_select_random_chunks.py  5b_select_representative_chunks.py  6_recreate_chunk_selection.py  7_predictions_to_validation_set.py
tools/: check_no_test_mode_true.py
utils/: io_helpers.py  utils.py
(+19 files in other folders)
